--- a/docker-compose-services.yml
+++ b/docker-compose-services.yml
@@ -4,6 +4,10 @@ services:
   geolocator-service:
     build:
       context: ./server/geolocator-service
+    develop:
+      watch:
+        - action: rebuild
+          path: ./server/geolocator-service
     ports:
       - "5000"
     stop_signal: SIGINT
@@ -11,6 +15,10 @@ services:
   iss-distance-service:
     build:
       context: ./server/iss-distance-service
+    develop:
+      watch:
+        - action: rebuild
+          path: ./server/iss-distance-service
     ports:
       - "5000"
     stop_signal: SIGINT
@@ -18,6 +26,10 @@ services:
   gateway:
     build:
       context: ./server/gateway
+    develop:
+      watch:
+        - action: rebuild
+          path: ./server/gateway
     ports:
       - "5000"
     environment:
@@ -28,6 +40,10 @@ services:
   frontend:
     build:
       context: ./frontend
+    develop:
+      watch:
+        - action: rebuild
+          path: ./frontend
     ports:
       - "5000:5000"
     environment:
