Set up metrics for the distance service

--- a/docker-compose-services.yml
+++ b/docker-compose-services.yml
@@ -15,6 +15,9 @@ services:
   iss-distance-service:
     build:
       context: ./server/iss-distance-service
+    environment:
+      # set up the otel collector exporter endpoint
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4317
     develop:
       watch:
         - action: rebuild
