Add instructions for tracing section

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - "4318:4318" # http
       - "8889:8889" # prometheus endpoint
 
+  # TODO: debug exporter for debugging?
+
   tempo:
     image: grafana/tempo:latest
     container_name: tempo
