--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: otel-collector
     command: ["--config=/etc/otel-collector-config.yml"]
     volumes:
-      - ./backend-configs/otel-collector-config.yml:/etc/otel-collector-config.yml
+      - ./telemetry-platform-config/otel-collector-config.yml:/etc/otel-collector-config.yml
     ports:
       - "4317:4317" # grpc
       - "4318:4318" # http
@@ -16,7 +16,7 @@ services:
     container_name: tempo
     command: [ "-config.file=/etc/tempo.yaml" ]
     volumes:
-      - ./backend-configs/tempo.yml:/etc/tempo.yaml
+      - ./telemetry-platform-config/tempo.yml:/etc/tempo.yaml
     ports:
       - "3200"    
       - "4317"    # otlp grpc
@@ -37,7 +37,7 @@ services:
     container_name: prometheus
     command: ["--config.file=/etc/prometheus/prometheus.yml"]
     volumes:
-      - ./backend-configs/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./telemetry-platform-config/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
 
@@ -46,7 +46,7 @@ services:
     container_name: loki
     command: ["--config.file=/etc/loki/loki-config.yml"]
     volumes:
-      - ./backend-configs/loki-config.yml:/etc/loki/loki-config.yml
+      - ./telemetry-platform-config/loki-config.yml:/etc/loki/loki-config.yml
     ports:
       - "3100"
 
@@ -58,7 +58,7 @@ services:
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
       - GF_AUTH_DISABLE_LOGIN_FORM=true
     volumes:
-      - ./backend-configs/grafana-datasources.yml:/etc/grafana/provisioning/datasources/datasources.yaml
+      - ./telemetry-platform-config/grafana-datasources.yml:/etc/grafana/provisioning/datasources/datasources.yaml
     ports:
       - "3000:3000"
 
