--- a/backend/gateway/requirements.txt
+++ b/backend/gateway/requirements.txt
@@ -2,3 +2,6 @@ flask
 requests
 opentelemetry-api
 opentelemetry-sdk
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-flask
+opentelemetry-instrumentation-requests
