--- a/backend/geolocator-service/requirements.txt
+++ b/backend/geolocator-service/requirements.txt
@@ -2,3 +2,6 @@ flask
 geopy
 opentelemetry-api
 opentelemetry-sdk
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-flask
+opentelemetry-instrumentation-requests
