--- a/backend/iss-distance-service/requirements.txt
+++ b/backend/iss-distance-service/requirements.txt
@@ -4,3 +4,5 @@ requests
 opentelemetry-api
 opentelemetry-sdk
 opentelemetry-exporter-otlp
+opentelemetry-instrumentation-flask
+opentelemetry-instrumentation-requests
