Ditch jaeger, add debug exporter, update README with useful links

--- a/telemetry-platform-config/grafana-datasources.yml
+++ b/telemetry-platform-config/grafana-datasources.yml
@@ -1,22 +1,17 @@
 apiversion: 1
 datasources:
-  - name: Prometheus
+  - name: Prometheus (Metrics)
     type: prometheus
     url: http://prometheus:9090
     access: proxy
     isDefault: true
 
-  - name: Loki
+  - name: Loki (Logs)
     type: loki
     url: http://loki:3100
     access: proxy
 
-  - name: Jaeger
-    type: jaeger
-    url: http://jaeger:16686
-    access: proxy
-
-  - name: Tempo
+  - name: Tempo (Traces)
     type: tempo
     access: proxy
     url: http://tempo:3200
